--- a/package.json
+++ b/package.json
@@ -1,30 +1,13 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "20.x"
-  },
-  "main": "index.js",
+  "name": "hello-world",
+  "version": "1.0.0",
+  "description": "A simple Hello World app",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node app.js"
   },
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.15.2"
-  },
-  "devDependencies": {
-    "tape": "^5.7.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+    "express": "^4.17.1"
+  }
 }
+
